@@ -68,7 +68,7 @@ class Config(object):
 		value = entry.get_value()
 
 		if value == None:
-			raise config.ConfigError
+			raise ConfigError
 
 		elif value.type == gconf.VALUE_STRING:
 			v = value.get_string()
